# fmartingr.com

./: .envrc  .firebaserc  .gitignore  .gitlab-ci.yml  CNAME  Felipe Martin.lektorproject  Makefile  README.md  bower.json  config.toml  feed.xml  gulpfile.js  index.html  package-lock.json  package.json  pyproject.toml  sitemap.xml
.builds/: pages.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml
_old/: .gitignore
_old/assets/: pubkey.txt
_old/configs/: thumbnail-generator.ini
_old/content/: contents.lr
_old/models/: blog.ini  gallery.ini  portfolio.ini  portfolio_category.ini  project.ini
_old/templates/: blog-list.html  blog-post.html  home.html
about/: index.html
assets/scss/: _layout.sass  _portfolio.sass  _syntax.sass  _table.sass  _variables.scss  style.sass
blog/: index.html
configs/: atom.ini  disqus-comments.ini  markdown-highlighter.ini  sassify.ini  scss.ini  thumbnail-generator.ini
content/: contents.lr  resume.json
content/about/: _index.md  contents.lr
content/blog/: contents.lr
content/contact/: contents.lr
content/made-with-open-source/: contents.lr
content/nintendo-swtich/: contents.lr
content/portfolio/: contents.lr
models/: blog-post.ini  blog.ini
openring/: in.html  urls
scripts/: migrate.py
server/: emacs.sh  nginx.conf  nginx.sh
static/css/: style.css
static/js/: main.js
static/sass/: _blog.sass  _fonts.sass  _layout.sass  _mixins.sass  _syntax.sass  (+3 more)
templates/: _base.html  blog-post.html  home.html  openring.html  page.html  portfolio.html  project.html
tests/: run.sh  tests_deploy.py
(+319 files in other folders)
