[tool.poetry]
name = "fmartingr.com"
version = "0.1.0"
description = ""
authors = ["Felipe Martin <me@fmartingr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lektor = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
